--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "^8.0.0-beta.10",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@nuxt/content": "1.15.1",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/feed": "^2.0.0",
+    "@nuxtjs/firebase": "8.2.2",
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/robots": "^2.5.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@typescript-eslint/parser": "^6.7.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.2.6",
@@ -42,6 +49,8 @@
     "vitest": "^0.26.2"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@pinia/nuxt": "^0.4.11"
   }
 }
